force-app/main/default/objects/custom_create373__c/custom_create373__c.object-meta.xml
<CustomObject>
    <label>Custom created object373</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects373</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>