force-app/main/default/objects/custom_create373__c/fields/custom_create_373field517__c.field-meta.xml
<CustomField>
    <fullName>custom_create_373field517__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 373field517</label>
    <type>Checkbox</type>
</CustomField>