force-app/main/default/objects/custom_create373__c/fields/custom_create_373field557__c.field-meta.xml
<CustomField>
    <fullName>custom_create_373field557__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 373field557</label>
    <type>Checkbox</type>
</CustomField>